Fix: Landing page spacing adjustments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@
 /* Background Image section */
 .masthead {
   background-size: cover;
-  min-height: 100vh;
+  min-height: 85vh;
   position: relative;
   color: white;
   text-shadow: 2px 2px rgba(0, 0, 0, 0.7);
